--- a/package.json
+++ b/package.json
@@ -6,20 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "tailwind:init": "tailwindcss init -p"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.20.0",
+    "react-dom": "^19.1.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@google/genai": "^1.20.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
